chore: rm unused variable